# circuitscope

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: ci.yml
circuitscope/: __init__.py  analyzer.py  event_fraction_utils.py  formula_generator.py  noise_presets.py  propagation.py  sampling.py  server.py
circuitscope/static/: index.html
circuitscope/static/assets/: index-BiOkqGwc.js  index-C-dTHpFi.css  index-C_G5DP7z.css  index-DNm0OqrN.js  index-Dbr4Qm5w.js
docs/: mathematical_framework.md
scripts/: readme-screenshots.mjs
src/: CircuitScope.jsx  exampleCircuits.js  main.css  main.jsx
src/components/: ExportMenu.jsx  Header.jsx  ImportDataModal.jsx  LoadCircuitModal.jsx  Logo.jsx  MainPanel.jsx  NoiseModal.jsx  Sidebar.jsx
src/components/sidebar/: DetectorPanel.jsx  ErrorDetails.jsx
src/components/timeline/: Timeline.jsx  icons.jsx
src/components/views/: AnalysisView.jsx  CodeView.jsx  CompareView.jsx  DEMView.jsx  ParameterInput.jsx  SweepChart.jsx
src/constants/: theme.js
src/contexts/: CircuitContext.jsx  ThemeContext.jsx
src/utils/: clipboard.js  eventFraction.js  exportTable.js  heatColor.js  measuredData.js  normalizeData.js  parameterFit.js  shareState.js  startupSound.js  sweep.js  validateCircuit.js
tests/: conftest.py  test_analyzer_export.py  test_detecting_regions.py  test_event_fractions.py  test_monte_carlo.py  test_noise_presets.py  test_propagation.py  test_repeat_loops.py  test_sampling.py  test_server_endpoints.py
tests/js/: exportTable.test.mjs  measuredData.test.mjs  parameterFit.test.mjs  sweep.test.mjs
